refactor: ajusta adapters de alerta e regra para nova estrutura de persistência